--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,3 +37,19 @@
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
   filter: alpha(opacity=1);
 }
+
+.bg-primary {
+  background-color: #015983 !important;
+}
+
+@media screen and (max-width: 767px) {
+  .mobile-menu {
+    top: 0;
+    bottom: 0;
+    left: -300px;
+    /* width: 300px; */
+    height: 100%;
+    /* background-color: #272727; */
+    transition: all ease-in-out .5s;
+  }
+}
