--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,14 +25,28 @@ img.opaque {
   -moz-transform: translateY(15%);
 }
 
-@media screen and (max-width: 767px) {
-  .mobile-menu {
-    top: 0;
-    bottom: 0;
-    left: -300px;
-    /* width: 300px; */
-    height: 100%;
-    /* background-color: #272727; */
-    transition: all ease-in-out .5s;
-  }
+.tooltip {
+  position: relative;
+  z-index: 1;
 }
+
+.tooltip .tooltip-text {
+  visibility: hidden;
+  text-align: center;
+  /* padding: 2px 6px; */
+  position: absolute;
+  z-index: 100;
+  /* top: -5px;
+  left: 5px; */
+  top: -120%;
+}
+.tooltip .tooltip-text--icon {
+  transform: translate(-30%, -5px);
+  -webkit-transform: translate(-30%, -5px);
+  -moz-transform: translate(-30%, -5px);
+}
+
+.tooltip:hover .tooltip-text {
+  visibility: visible;
+}
+
